fixed bug with relevance tab margins on narrow screens

--- a/less/new-responsive-767px-max.less
+++ b/less/new-responsive-767px-max.less
@@ -213,6 +213,11 @@
     margin-bottom: 12px;
   }
 
+  .pointAreaActions.showRelevance {
+    margin-bottom: -1px;
+  }
+  
+  
   
   .topPointVotingArea {
     display:inline !important;
